--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "private": false,
   "devDependencies": {
     "expect.js": "^0.3.1",
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "webpack": "^4.40.2",
+    "webpack-cli": "^3.3.9"
   },
   "scripts": {
     "test": "jest"
