[ADD] package.json

--- a/package.json
+++ b/package.json
@@ -27,5 +27,6 @@
   "scripts": {
     "test": "jest"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" }
 }
