--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,1 @@
-@{{jfklorenz}}:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken={{dfcfba8051f28b040f50e971e347d7f92b9c43db}}
+registry=https://npm.pkg.github.com/jfklorenz
