--- a/package.json
+++ b/package.json
@@ -28,5 +28,5 @@
     "test": "jest"
   },
   "dependencies": {},
-  "publishConfig": { "registry": "https://npm.pkg.github.com/" }
+  "publishConfig": { "registry": "https://npm.pkg.github.com/jfklorenz" }
 }
